# ahara-infra

./: AGENTS.md  Cargo.toml  Makefile  README.md  platform.yml
backend/: Cargo.toml
backend/auth-trigger/src/: main.rs
backend/cors-handler/src/: main.rs
backend/db-migrate-truenas/src/: main.rs
backend/db-migrate/src/: main.rs  ops.rs
backend/grafana-dashboard-bootstrap/: Cargo.toml
backend/grafana-dashboard-bootstrap/src/: config.rs  grafana.rs  lib.rs  main.rs  request.rs  ssm.rs
backend/grafana-dashboard-deploy/: Cargo.toml  README.md
backend/grafana-dashboard-deploy/src/: config.rs  grafana.rs  lib.rs  main.rs  request.rs  validation.rs
backend/komodo-proxy/src/: main.rs
backend/ops-dashboard/: Cargo.toml
backend/ops-dashboard/src/: cloudwatch.rs  lib.rs  main.rs  query.rs
backend/truenas-roles-anywhere-enroll/: Cargo.toml
backend/truenas-roles-anywhere-enroll/src/: main.rs
crates/ahara-lambda-http/: Cargo.toml  README.md
crates/ahara-lambda-http/src/: cors.rs  error.rs  extract.rs  lib.rs  response.rs  routing.rs
crates/ahara-lambda-telemetry/: Cargo.toml  README.md
crates/ahara-lambda-telemetry/src/: adoption.rs  config.rs  event.rs  http.rs  lib.rs  logger.rs  metrics.rs  operation.rs  otel.rs  span_attrs.rs
infrastructure/terraform/: imports.tf  locals.tf  main.tf  outputs.tf  security-detection.tf  security-logging.tf  variables.tf
infrastructure/terraform/control/: project-agents-of-glass.tf  project-ahara-access.tf  project-ahara-business.tf  project-ahara-infra.tf  project-ahara-observability.tf  project-ahara-portal.tf  project-airwave.tf  project-catalyst-castellum.tf  project-harbor.tf  project-house-sensors.tf  project-legato.tf  project-linkdrop.tf  project-nas-falkordb.tf  project-nas-sonarqube.tf  project-nas-text-embeddings-inference.tf  project-shuttlecraft.tf  project-sulion.tf  project-tsonu-music.tf  truenas-roles-anywhere.tf  variables.tf
infrastructure/terraform/modules/truenas-roles-anywhere-workload/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/network/: alb.tf  cloudfront.tf  cloudwatch-logs-access.tf  dns.tf  ec2-bastion.tf  ec2-nat.tf  ec2-proxy.tf  ec2-wireguard.tf  locals.tf  log-delivery-dependencies.tf  logging.tf  observability-ingest-iam.tf  otel-gateway.tf  outputs.tf  reverse-proxy-dns.tf  secrets-vpn.tf  security-groups.tf  ssm.tf  variables.tf  vpc.tf  waf.tf  wireguard-nlb.tf
infrastructure/terraform/network/templates/: alloy_config.alloy.tpl  common_user_data.sh.tpl  nat_instance_user_data.sh.tpl  reverse_proxy_user_data.sh.tpl  (+4 more)
infrastructure/terraform/services/: auth-trigger.tf  ci-ingest.tf  cognito-listener.tf  cors.tf  db-migrate-truenas.tf  db-migrate.tf  dns.tf  fdroid.tf  grafana-dashboard-bootstrap.tf  grafana-dashboard-deploy.tf  identity.tf  komodo-proxy.tf  locals.tf  observability-ingest.tf  observability-stack.tf  observability.tf  og-server.tf  ops-dashboard.tf  outputs.tf  rds.tf  rum.tf  ssm.tf  variables.tf
scripts/: create-cognito-user.sh  deploy.sh
(+33 files in other folders)
