[workspace]
members = [
    "crates/ahara-lambda-http",
    "crates/ahara-lambda-telemetry",
]
resolver = "2"

[workspace.dependencies]
bytes = "1"
lambda_http = "0.14"
lambda_runtime = "0.13"
opentelemetry = { version = "0.32", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["http-proto", "reqwest-blocking-client", "trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "metrics", "logs"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
